--- a/templates/kyc_score.html
+++ b/templates/kyc_score.html
@@ -4,181 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>比賽畫面</title>
-    <style>
-        body {
-            background-color: #4B006E;
-            font-family: Arial, sans-serif;
-            color: white;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .container {
-            width: 90%;
-            max-width: 600px;
-            box-sizing: border-box;
-        }
-        .header, .group, .players, .timer {
-            border: 2px solid white;
-            padding: 10px;
-            margin-bottom: 20px;
-            box-sizing: border-box;
-        }
-        .header {
-            font-size: 22px;
-        }
-        .group {
-            font-size: 18px;
-            line-height: 1.2;
-        }
-        .group .category {
-            color: red;
-        }
-        .players-container {
-            margin-bottom: 50px;
-            position: relative;
-        }
-        .players {
-            background-color: white;
-            margin-bottom: 0;
-            position: relative;
-            height: 150px;
-            line-height: normal;
-        }
-        .player-a {
-            background-color: #1E90FF;
-            color: black;
-        }
-        .player-b {
-            background-color: #32CD32;
-            color: black;
-        }
-        .country-code {
-            position: absolute;
-            top: 50%;
-            left: 5px;
-            font-size: 21px;
-            color: white;
-            transform: translateY(-50%);
-        }
-        .medal-area_A {
-            position: absolute;
-            top: 50px;
-            left: 40%;
-            transform: translateX(-50%);
-            display: flex;
-            gap: 5px;
-        }
-        .medal-area_B {
-            position: absolute;
-            bottom: 50px;
-            left: 40%;
-            transform: translateX(-50%);
-            display: flex;
-            gap: 5px;
-        }
-        .medal-box {
-            width: 60px;
-            height: 30px;
-            border: 2px solid black;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 14px;
-            color: red;
-            background-color: white;
-        }
-        .score-area_A {
-            position: absolute;
-            bottom: 15px;
-            left: 40%;
-            transform: translateX(-50%);
-            display: flex;
-            gap: 5px;
-        }
-        .score-area_B {
-            position: absolute;
-            top: 15px;
-            left: 40%;
-            transform: translateX(-50%);
-            display: flex;
-            gap: 5px;
-        }
-        .score-box {
-            width: 60px;
-            height: 30px;
-            border: 2px solid black;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 14px;
-            color: black;
-            background-color: white;
-        }        
-        .player-name {
-            position: absolute;
-            width: 100%;
-            font-size: 25px;
-            color: white;
-            padding: 2px;
-        }
-        .player-a .player-name {
-            top: 0;
-            left: 0;
-        }
-        .player-b .player-name {
-            bottom: 0;
-            left: 0;
-        }
-        .space {
-            background-color: white;
-            height: 60px;
-        }
-        .timer-container {
-            display: inline-block;
-            margin-top: 20px;
-        }
-        .timer {
-            font-size: 3em;
-            color: yellow;
-            cursor: pointer;
-            display: inline-block;
-            vertical-align: middle;
-        }
-        .yellow-boxes {
-            position: absolute;
-            right: 5%;
-            top: 15px;
-            display: flex;
-            flex-direction: column;
-            gap: 5px;
-            visibility: hidden;
-        }
-        .yellow-box {
-            width: 50px;
-            height: 35px;
-            background-color: yellow;
-        }
-        .yellow_toggle-button {
-            position: absolute;
-            left: 110%;
-            top: 50%;
-            transform: translateY(-50%);
-            padding: 5px 10px;
-            background-color: #FFD700;
-            border: none;
-            cursor: pointer;
-            font-size: 14px;
-        }
-        .file-select {
-            margin-top: 20px;
-            font-size: 1.5em;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='kyc_judo_styles.css') }}">
 </head>
 <body>
     <div class="container">
@@ -197,9 +23,7 @@
         
         <div class="header">{{ number or "場序128" }}</div>
         <div class="group">
-            <!-- <div class="category">組別</div> -->
             <div>{{ subject or "社會男子組-81KG" }}</div>
-            <!-- <div>-81KG</div> -->
         </div>
         <div class="players-container">
             <div class="players player-a">
@@ -247,75 +71,7 @@
             </button>
         </div>
     </div>
-    <script>
-        let timerInterval;
-        let isTimerRunning = false;
-        let timeRemaining = 240;
-
-        function incrementScore(element) {
-            let score = parseInt(element.innerText);
-            element.innerText = score + 1;
-        }
-
-        function toggleYellowBoxes(className) {
-            const yellowBoxes = document.querySelectorAll(`.${className} .yellow-box`);
-            let visibleCount = Array.from(yellowBoxes).filter(box => box.style.visibility === 'visible').length;
-
-            if (visibleCount < yellowBoxes.length) {
-                yellowBoxes[visibleCount].style.visibility = 'visible';
-            } else {
-                yellowBoxes.forEach(box => box.style.visibility = 'hidden');
-            }
-        }
-
-        function updateTimer() {
-            if (timeRemaining > 0) {
-                timeRemaining--;
-                updateTimerDisplay();
-            } else {
-                clearInterval(timerInterval);
-                isTimerRunning = false;
-                alert("時間到！");
-            }
-        }
-
-        function updateTimerDisplay() {
-            let minutes = Math.floor(timeRemaining / 60);
-            let seconds = timeRemaining % 60;
-            document.querySelector('.timer').innerText = `${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
-        }
-
-        function toggleTimer() {
-            if (isTimerRunning) {
-                clearInterval(timerInterval);
-            } else {
-                timerInterval = setInterval(updateTimer, 1000);
-            }
-            isTimerRunning = !isTimerRunning;
-        }
-
-        function setTimer(minutes, seconds) {
-            timeRemaining = minutes * 60 + seconds;
-            updateTimerDisplay();
-        }
-
-        function openSettings() {
-            let timeInput = prompt("請輸入倒數時間 (格式: MM:SS)", "5:00");
-            if (timeInput) {
-                let timerParts = timeInput.split(':');
-                let minutes = parseInt(timerParts[0]);
-                let seconds = parseInt(timerParts[1]);
-                if (!isNaN(minutes) && !isNaN(seconds)) {
-                    setTimer(minutes, seconds);
-                } else {
-                    alert("請輸入有效的時間格式");
-                }
-            }
-        }
-
-        document.querySelector('.timer').addEventListener('dblclick', function() {
-            openSettings();
-        });
-    </script>
+    <script src="{{ url_for('static', filename='base_scripts.js') }}"></script>
+    <script src="{{ url_for('static', filename='ycard_scripts.js') }}"></script>
 </body>
 </html>
