--- a/templates/wrest_score.html
+++ b/templates/wrest_score.html
@@ -4,92 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>比賽項目組別</title>
-    <style>
-        body {
-            background-color: #3f165a;
-            font-family: Arial, sans-serif;
-            color: white;
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-        .container {
-            text-align: center;
-        }
-        .info {
-            margin-top: 20px;
-            font-size: 1.5em;
-            border: 2px solid white;
-            color: red;
-        }
-        .scoreboard {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
-        .team {
-            width: 200px;
-            padding: 20px;
-            margin: 10px;
-            box-sizing: border-box;
-        }
-        .team.blue {
-            background-color: #1a6db6;
-            border: 2px solid white;
-        }
-        .team.red {
-            background-color: #c62828;
-            border: 2px solid white;
-        }
-        .team-name {
-            font-size: 1.2em;
-            border: 2px solid white;
-            margin-bottom: 10px;
-        }
-        .team-member {
-            font-size: 1.2em;
-            border: 2px solid white;
-            margin-bottom: 20px;
-        }
-        .score {
-            font-size: 3em;
-            border: 2px solid white;
-            padding: 10px;
-            margin-bottom: 10px;
-            cursor: pointer;
-        }
-        .leader {
-            font-size: 1.2em;
-            margin-top: -15px;
-            cursor: pointer;
-            height: 30px;
-            line-height: 30px;
-            color: black;
-        }
-        .timer-container {
-            display: inline-block;
-            margin-top: 20px;
-        }
-        .timer {
-            font-size: 3em;
-            color: yellow;
-            cursor: pointer;
-            display: inline-block;
-            vertical-align: middle;
-        }
-        .settings-button {
-            display: inline-block;
-            vertical-align: middle;
-            margin-left: 10px;
-        }
-        .file-select {
-            margin-top: 20px;
-            font-size: 1.5em;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='wrest_styles.css') }}">
 </head>
 <body>
     <div class="container">
@@ -137,76 +52,7 @@
         </div>
     </div>
 
-    <script>
-        let timerInterval;
-        let isTimerRunning = false;
-        let timeRemaining = 240;
-
-        function incrementScore(element) {
-            let score = parseInt(element.innerText);
-            element.innerText = score + 1;
-        }
-
-        function toggleLeader(element) {
-            if (element.innerText === "") {
-                element.innerText = "領先方";
-                element.style.backgroundColor = "yellow";
-                element.style.color = "black";
-            } else {
-                element.innerText = "";
-                element.style.backgroundColor = "";
-                element.style.color = "black";
-            }
-        }
-
-        function updateTimer() {
-            if (timeRemaining > 0) {
-                timeRemaining--;
-                updateTimerDisplay();
-            } else {
-                clearInterval(timerInterval);
-                isTimerRunning = false;
-                alert("時間到！");
-            }
-        }
-
-        function updateTimerDisplay() {
-            let minutes = Math.floor(timeRemaining / 60);
-            let seconds = timeRemaining % 60;
-            document.querySelector('.timer').innerText = `${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
-        }
-
-        function toggleTimer() {
-            if (isTimerRunning) {
-                clearInterval(timerInterval);
-            } else {
-                timerInterval = setInterval(updateTimer, 1000);
-            }
-            isTimerRunning = !isTimerRunning;
-        }
-
-        function setTimer(minutes, seconds) {
-            timeRemaining = minutes * 60 + seconds;
-            updateTimerDisplay();
-        }
-
-        function openSettings() {
-            let timeInput = prompt("請輸入倒數時間 (格式: MM:SS)", "5:00");
-            if (timeInput) {
-                let timerParts = timeInput.split(':');
-                let minutes = parseInt(timerParts[0]);
-                let seconds = parseInt(timerParts[1]);
-                if (!isNaN(minutes) && !isNaN(seconds)) {
-                    setTimer(minutes, seconds);
-                } else {
-                    alert("請輸入有效的時間格式");
-                }
-            }
-        }
-
-        document.querySelector('.timer').addEventListener('dblclick', function() {
-            openSettings();
-        });
-    </script>
+    <script src="{{ url_for('static', filename='base_scripts.js') }}"></script>
+    <script src="{{ url_for('static', filename='leader_scripts.js') }}"></script>
 </body>
 </html>
