--- a/static/kyc_judo_styles.css
+++ b/static/kyc_judo_styles.css
@@ -83,7 +83,7 @@ body {
     align-items: center;
     font-size: 14px;
     color: red;
-    background-color: white;
+    /* background-color: white; */
 }
 .score-area_A {
     position: absolute;
@@ -155,6 +155,11 @@ body {
     width: 50px;
     height: 35px;
     background-color: yellow;
+}
+.red-box {
+    width: 50px;
+    height: 35px;
+    background-color: red;
 }
 .yellow_toggle-button {
     position: absolute;
