--- a/templates/kyc_score.html
+++ b/templates/kyc_score.html
@@ -21,6 +21,16 @@
         .kyc-label span {
             margin: 0 5px; /* 调整字母之间的间距 */
         }
+        .crown-icon {
+            display: none;
+            width: 40px;  /* 根据需要调整图片大小 */
+            height: 40px; /* 根据需要调整图片大小 */
+            margin-left: 5px;  /* 调整与姓名的间距 */
+            vertical-align: middle; /* 图片与文本垂直对齐 */
+        }
+
+
+        
     </style>
 </head>
 <body>
@@ -44,8 +54,11 @@
         </div>
         <div class="players-container">
             <div class="players player-a">
-                <div class="player-name">{{ player1 or "選手一" }}</div>
-                <div class="country-code">TPE</div>
+                <div class="player-name">
+                    <img src="{{ url_for('static', filename='crown.png') }}" alt="Crown" class="crown-icon">
+                    {{ player1_name or "選手一" }}
+                </div>
+                <div class="country-code">{{player1_place or "TPE"}}</div>
                 <div class="medal-area_A">
                     <div class="medal-box" style="color: red; background-color: #1E90FF;" onclick="changeColorAndIncrementScore(this, 'score-area_B', 0)">G</div>
                     <div class="medal-box" style="color: red; background-color: #1E90FF;" onclick="changeColorAndIncrementScore(this, 'score-area_B', 1)">D</div>
@@ -63,7 +76,7 @@
                 <span>C</span>
             </div>
             <div class="players player-b">
-                <div class="country-code">UZB</div>
+                <div class="country-code">{{player2_place or "UZB"}}</div>
                 <div class="medal-area_B">
                     <div class="medal-box" style="color: red; background-color: #32CD32;" onclick="changeColorAndIncrementScore(this, 'score-area_A', 0)">G</div>
                     <div class="medal-box" style="color: red; background-color: #32CD32;" onclick="changeColorAndIncrementScore(this, 'score-area_A', 1)">D</div>
@@ -74,7 +87,10 @@
                     <div class="score-box" style="background-color: #32CD32;" onclick="incrementScore(this)">0</div>
                     <div class="score-box" style="background-color: #32CD32;" onclick="incrementScore(this)">0</div>
                 </div>
-                <div class="player-name">{{ player2 or "選手二" }}</div>
+                <div class="player-name">
+                    <img src="{{ url_for('static', filename='crown.png') }}" alt="Crown" class="crown-icon">
+                    {{ player2 or "選手二" }}
+                </div>
             </div>
         </div>
         <div class="timer-container">
@@ -88,6 +104,8 @@
         let timerInterval;
         let isTimerRunning = false;
         let timeRemaining = 240;
+        let playerAScore = { D: 0, T: 0 };
+        let playerBScore = { D: 0, T: 0 };
 
         function changeColorAndIncrementScore(element, targetPlayer, scoreBoxIndex) {
             // 改变颜色
@@ -98,12 +116,59 @@
             let scoreBox = scoreBoxes[scoreBoxIndex];
             let score = parseInt(scoreBox.innerText);
             scoreBox.innerText = score + 1;
+
+            // 记录由 D 或 T 加分
+            if (element.innerText === 'D') {
+                if (targetPlayer === 'score-area_A') {
+                    playerBScore.D += 1;
+                } else {
+                    playerAScore.D += 1;
+                }
+            } else if (element.innerText === 'T') {
+                if (targetPlayer === 'score-area_A') {
+                    playerBScore.T += 1;
+                } else {
+                    playerAScore.T += 1;
+                }
+            }
+
+            checkForWinner();
         }
 
         function incrementScore(element) {
             let score = parseInt(element.innerText);
-            element.innerText = score + 1;
+            score += 1;
+            element.innerText = score;
+
+            checkForWinner();
         }
+
+        function checkForWinner() {
+            let playerAScore1 = parseInt(document.querySelector('.score-area_A .score-box:nth-child(1)').innerText);
+            let playerAScore2 = parseInt(document.querySelector('.score-area_A .score-box:nth-child(2)').innerText);
+
+            let playerBScore1 = parseInt(document.querySelector('.score-area_B .score-box:nth-child(1)').innerText);
+            let playerBScore2 = parseInt(document.querySelector('.score-area_B .score-box:nth-child(2)').innerText);
+
+            if (playerAScore1 === 1 || playerAScore2 === 2) {
+                document.querySelector('.player-a .crown-icon').style.display = 'inline';
+                stopTimerAndHighlight();
+            }
+
+            if (playerBScore1 === 1 || playerBScore2 === 2) {
+                document.querySelector('.player-b .crown-icon').style.display = 'inline';
+                stopTimerAndHighlight();
+            }
+        }
+
+        function stopTimerAndHighlight() {
+            clearInterval(timerInterval);  // 停止计时器
+            isTimerRunning = false;
+            document.querySelector('.timer').style.backgroundColor = 'red';  // 设置计时器背景为红色
+        }
+
+        // 现有的计时器相关代码保持不变
+
 
 
 
@@ -114,9 +179,52 @@
             } else {
                 clearInterval(timerInterval);
                 isTimerRunning = false;
-                alert("時間到！");
+                document.querySelector('.timer').style.backgroundColor = 'red';  // 设置计时器背景为红色
+                checkForWinnerOnTimeout(); // 时间到后判定胜负
             }
         }
+        function checkForWinnerOnTimeout() {
+            let playerAScore2 = parseInt(document.querySelector('.score-area_A .score-box:nth-child(2)').innerText);
+            let playerBScore2 = parseInt(document.querySelector('.score-area_B .score-box:nth-child(2)').innerText);
+
+            let playerAScore3 = parseInt(document.querySelector('.score-area_A .score-box:nth-child(3)').innerText);
+            let playerBScore3 = parseInt(document.querySelector('.score-area_B .score-box:nth-child(3)').innerText);
+
+            // 判定 score box 2 的得分
+            if (playerAScore2 > playerBScore2) {
+                document.querySelector('.player-a .crown-icon').style.display = 'inline';
+            } else if (playerBScore2 > playerAScore2) {
+                document.querySelector('.player-b .crown-icon').style.display = 'inline';
+            } else { // 若 score box 2 得分相同
+                if (playerAScore.D > playerBScore.D) {
+                    document.querySelector('.player-a .crown-icon').style.display = 'inline';
+                } else if (playerBScore.D > playerAScore.D) {                
+                    document.querySelector('.player-b .crown-icon').style.display = 'inline';
+                } else {
+                    // 判定 score box 3 的得分
+                    if (playerAScore3 > playerBScore3) {
+                        document.querySelector('.player-a .crown-icon').style.display = 'inline';
+                    } else if (playerBScore3 > playerAScore3) {
+                        document.querySelector('.player-b .crown-icon').style.display = 'inline';
+                    } else { // 若 score box 3 得分相同
+                        if (playerAScore.T > playerBScore.T) {
+                            document.querySelector('.player-a .crown-icon').style.display = 'inline';
+                        } else if (playerBScore.T > playerAScore.T) {
+                            document.querySelector('.player-b .crown-icon').style.display = 'inline';
+                        } else {
+                            // 如果所有条件都相同，最后得分者胜
+                            if (timeRemaining % 2 === 0) {
+                                document.querySelector('.player-a .crown-icon').style.display = 'inline';
+                            } else {
+                                document.querySelector('.player-b .crown-icon').style.display = 'inline';
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+
 
         function updateTimerDisplay() {
             let minutes = Math.floor(timeRemaining / 60);
